--- a/src/scss/partials/layouts/_header.scss
+++ b/src/scss/partials/layouts/_header.scss
@@ -29,6 +29,7 @@ nav {
     opacity: 0;
 }
 .artistNameOnScroll {
+    font-weight: 800;
     margin: 0;
     opacity: 1;
     color: white;
